untitled/src/objects/JobPostings__c.object
<CustomObject>
    <description>Job Postings Object to  list positions</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>JobPostings</relationshipLabel>
        <relationshipName>JobPostings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active Jobs</description>
        <label>Active Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <description>Salary Information</description>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>JobPosting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>JobPostings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JobPostings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>